check the changelog file

--- a/changeLog.txt
+++ b/changeLog.txt
@@ -1,5 +1,3 @@
-added scanController
-added scan ejs
-added graph logic
-did some changes in css
-
+added the blob but didn't look good so deleted item
+changed the mru solution page
+trying to add the process name in the rr ejs
